--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>你好世界</title>
     <meta charset="utf-8">
+	
+	<link rel="icon" href="images/screen_16px_1207792_easyicon.net.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="images/screen_16px_1207792_easyicon.net.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/grid.css" type="text/css" media="screen">   
